force-app/main/default/objects/User/fields/ppbt__Braintree_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>ppbt__Braintree_Customer_Id__c</fullName>
    <description>Id of customer in Braintree</description>
    <label>Braintree Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>