force-app/main/default/objects/User/fields/PPBTB2BV2__DoNotShowAgainLIPP__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__DoNotShowAgainLIPP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to store value for LIPP Notification</description>
    <label>Do not show again LIPP</label>
    <type>Checkbox</type>
</CustomField>