force-app/main/default/objects/User/fields/PPBTB2BV2__DoNotShowAgainLiPPPassword__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__DoNotShowAgainLiPPPassword__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not show again LiPP Password</label>
    <type>Checkbox</type>
</CustomField>