force-app/main/default/objects/User/fields/PPBTB2BV2__IsCreatedFromPayPal__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__IsCreatedFromPayPal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is created from PayPal</label>
    <type>Checkbox</type>
</CustomField>