force-app/main/default/objects/User/fields/PPBTB2BV2__IsFirstLogin__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__IsFirstLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is first login</label>
    <type>Checkbox</type>
</CustomField>